Fix navigation on mobile

--- a/api/css/style.css
+++ b/api/css/style.css
@@ -103,8 +103,9 @@ h4
 
 .top-right-logo-xs
 {
-	width: 10%;
-	margin-right: 5%;
+	width: 20%;
+	margin-right: 10%;
+	margin-top: 3%;
 }
 
 .main-search-bar
@@ -117,6 +118,11 @@ h4
 	margin-top: 5%;
 	margin-left: -30px;
 	margin-right: -30px;
+}
+
+.mobile-nav
+{
+	z-index: 99999;
 }
 
 .search-btn
